weight paint crash and computer freeze when painting #33806

Closed
opened 2013-01-08 11:47:48 +01:00 by Will Barry · 7 comments

%%%--- Operating System, Graphics card ---

xp sp3

Geforce gtx 560 ti

CPU: AMD Anthlon II X3 440
3.01 GHZ

3.25 GB of RAM

- Blender version with error, and version that worked ---

all of the official 2.6 versions and dynotopo branch

- Short description of error ---

Blender crashes when trying to paint a stroke. I have also encountered a full computer freeze after restarting Blender and trying it a few times. The problem occurs using any mesh. The computer freeze occurs after trying it a few times.

It might be a gpu issue, but am unsure. Other than that, everything works fine, and I have no issues with my gpu.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Since it happens with all 2.6 releases, I haven't attached a .blend.

Steps:

Open blender, add mesh, go to weight paint, try to paint, and it will crash

%%%

%%%--- Operating System, Graphics card --- xp sp3 Geforce gtx 560 ti CPU: AMD Anthlon II X3 440 3.01 GHZ 3.25 GB of RAM - Blender version with error, and version that worked --- all of the official 2.6 versions and dynotopo branch - Short description of error --- Blender crashes when trying to paint a stroke. I have also encountered a full computer freeze after restarting Blender and trying it a few times. The problem occurs using any mesh. The computer freeze occurs after trying it a few times. It might be a gpu issue, but am unsure. Other than that, everything works fine, and I have no issues with my gpu. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Since it happens with all 2.6 releases, I haven't attached a .blend. Steps: Open blender, add mesh, go to weight paint, try to paint, and it will crash %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Don't have crashes on meither windows nor linux systems. Does crash happen for you with default cube scene? Did you try loading factory defaults before painting?

Also, the fact that you've got freezes makes me think culprit is in video driver, did you try installing very recent version from nvidia site?%%%

%%%Don't have crashes on meither windows nor linux systems. Does crash happen for you with default cube scene? Did you try loading factory defaults before painting? Also, the fact that you've got freezes makes me think culprit is in video driver, did you try installing very recent version from nvidia site?%%%
Author

%%%Restoring factory defaults did the trick. Thank you very much.%%%

%%%Restoring factory defaults did the trick. Thank you very much.%%%

%%%Then i would ask whether you still have got startup.blend which lead to issues? It'll be still interesting to investigate what was exact reason of your crashes. Could have been issue with window draw mode/VBOs or some addon..%%%

%%%Then i would ask whether you still have got startup.blend which lead to issues? It'll be still interesting to investigate what was exact reason of your crashes. Could have been issue with window draw mode/VBOs or some addon..%%%
Author

%%%Yep. I still have it. Attached.%%%

%%%Yep. I still have it. Attached.%%%

%%%This was indeed a bug in blender, possibly you managed to save a file while weight-painting,
fixed r53673.%%%

%%%This was indeed a bug in blender, possibly you managed to save a file while weight-painting, fixed r53673.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#33806
No description provided.