fix [#33806] weight paint crash and computer freeze when painting

clear weight paint runtime data on file-load.